# egra

./: .gitattributes  .gitignore  Generations.csv  Generations_1.csv  Generations_2.csv  JERS.joblib  JERS_values.npy  LICENSE  README.md  Untitled.ipynb  config-feedforward.txt  generation.py  pyproject.toml  race.py  requirements.txt  run.py  setup.cfg  stats_dashboard.py
models/car/: F1.mtl  F2.mtl
shaders/: circuito.frag  circuito.vert  grass.frag  grass.vert  skybox.frag  skybox.vert
src/: AI.py  Camera.py  Car3D.py  Circuito.py  Engine.py  Light.py  Music.py  Physics.ipynb  Physics.py  UI.py  car.py  car_AI.py  car_IA_2.py  car_obj.py  generation.py  grass.py  mypopulation.py  plots.py  race.py  splitter.py  texturing.py
src/game/: Circuito.py  Engine.py  Physics.py  UI.py  car.py  generation.py  (+1 more)
stats_data/: JERS.joblib  avg_car_vel.csv  ia_gens.csv  off_track.csv  race_time.csv  vel_n_time.csv
tests/: __init__.py  test_car.py  test_engine.py  test_textures.py  test_track.py
winners/: 1_winner_gen_0047.pkl  1_winner_gen_0271.pkl  winner_gen_0001.pkl  winner_gen_0002.pkl  winner_gen_0003.pkl  winner_gen_0005.pkl  winner_gen_0006.pkl  winner_gen_0009.pkl  winner_gen_0012.pkl  winner_gen_0042.pkl  winner_gen_1.pkl  winner_gen_12.pkl  winner_gen_120.pkl  winner_gen_153.pkl  winner_gen_2.pkl  winner_gen_200.pkl  winner_gen_21.pkl  winner_gen_217.pkl  winner_gen_3.pkl  winner_gen_4.pkl  winner_gen_41.pkl  winner_gen_5.pkl  winner_gen_52.pkl  winner_gen_64.pkl  winner_gen_7.pkl  winner_gen_8.pkl  winner_gen_9.pkl  winner_gen_90.pkl  winner_gen_98.pkl
(+1 files in other folders)
