[metadata]
name = game
description = A package containing the game
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    game
install_requires =
    certifi==2022.9.24
    charset-normalizer==2.1.1
    contourpy==1.0.6
    cycler==0.11.0
    dnspython==2.2.1
    fonttools==4.38.0
    glcontext==2.3.7
    idna==3.4
    kiwisolver==1.4.4
    matplotlib==3.6.2
    moderngl==5.7.2
    networkx==2.8.8
    numpy==1.23.5
    packaging==21.3
    Pillow==9.3.0
    pygame==2.1.3.dev8
    pygame-menu==4.2.8
    PyGLM==2.6.0
    pymongo==4.3.3
    PyOpenGL==3.1.6
    pyparsing==3.0.9
    pyperclip==1.8.2
    python-dateutil==2.8.2
    PyWavefront==1.3.3
    requests==2.28.1
    scipy==1.9.3
    six==1.16.0
    typing_extensions==4.4.0
    urllib3==1.26.12
python_requires = >=3.6
package_dir = 
    = src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
game = py.typed

[flake8]
max-line-length = 160